More work on the SP router tests